--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.1.5",
-    "node-sass": "^9.0.0",
+    "gsap": "^3.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.85.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
