--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.1.5",
     "gsap": "^3.12.7",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
