--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3",
     "sass": "^1.85.0",
     "web-vitals": "^2.1.4"
   },
